<resources>
    <string name="app_name">Driving Coach</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>


    <string name="title_activity_map">Driving Coach</string>
    <string name="title_activity_statistics">Driving Coach</string>
    <string name="title_activity_set_up">Driving Coach</string>
    <string name="title_activity_dashboard">Driving Coach</string>
    <string name="title_activity_saved_trips">Driving Coach</string>
    <string name="title_activity_timespan">Driving Coach</string>
    <string name="title_activity_bad_makers">Driving Coach</string>

    <string name="commentsRegardingTrip">Comments of last trip</string>
    <string name="fuelEconomyFeedback">Fuel economy feedback</string>
    <string name="ROUTE">ROUTE</string>
    <string name="DRIVING">DRIVING</string>
    <string name="gps">GPS</string>
    <string name="gps_enable">Enable</string>
    <string name="gps_disable">Disable</string>

    <string name="bad_behavior">BAD BEHAVIOR TYPE</string>
    <string name="bad_behavior_content">You were accelerating too much, and the fuel is at high consuming and bla bla bla bla</string>
    <string name="addComment">ADD COMMENT</string>
    <string name="save">SAVE</string>
    <string name="cancel">CANCEL</string>
    <string name="title_activity_driving_behavior">drivingBehavior</string>
    <string name="hint"> add comment</string>
    <string name="WEEK">WEEK</string>
    <string name="MONTH">MONTH</string>
    <string name="lastMonth">LAST MONTH</string>
    <string name="selectInterval">SELECT INTERVAL</string>
    <string name="lastWeek">LAST WEEK</string>
    <string name="startingTime">starting time</string>
    <string name="endingTime">ending time</string>
</resources>
