<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.yzuo.drivingcoach.timespan">

    <RadioGroup
        android:id="@+id/timeSpanRadioGroup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/lastWeek"
            android:text="@string/lastWeek"
            style="@style/timeSpanRadioGroupStyle" />
        <RadioButton
            android:id="@+id/lastMonth"
            android:text="@string/lastMonth"
            style="@style/timeSpanRadioGroupStyle" />
        <RadioButton
            android:id="@+id/selectInterval"
            android:text="@string/selectInterval"
            style="@style/timeSpanRadioGroupStyle" />
    </RadioGroup>

    <Button
        android:id="@+id/startingTime"
        android:hint="@string/startingTime"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/timeSpanRadioGroup"
        android:layout_margin="15dp"
        android:background="@drawable/button_background"
        />

    <Button
        android:id="@+id/endingTime"
        android:hint="@string/endingTime"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/startingTime"
        android:layout_margin="15dp"
        android:background="@drawable/button_background"
        />

</RelativeLayout>
