<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.yzuo.drivingcoach.drivingBehavior"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            >
            <ImageView
                android:id="@+id/behaviour_comment_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/btn_stat_notify_driving_behavior"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="20dp"
                />

            <TextView
                android:id="@+id/bad_behavior"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/behaviour_comment_icon"
                android:layout_toEndOf="@+id/behaviour_comment_icon"
                android:fontFamily="sans-serif"
                android:textStyle="bold"
                android:textColor="@color/themeColor"
                android:textSize="20sp"
                android:gravity="left"
                />

        </RelativeLayout>

        <TextView
            android:id="@+id/bad_behavior_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:fontFamily="sans-serif"
            android:textColor="@color/themeColor"
            android:textSize="15sp"
            android:gravity="left"
            />

        <RadioButton
            android:id="@+id/addComment"
            android:button="@null"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textSize="12dp"
            android:gravity="center|center_vertical"
            android:textAlignment="gravity"
            android:text="@string/addComment"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:background="@drawable/button_background"
            android:includeFontPadding="false"
            />

        <LinearLayout
            android:id="@+id/commentContainer"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            >
            <EditText
                android:id="@+id/comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="top|start"
                android:background="@drawable/comment_text_box"
                android:hint="@string/hint"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_margin="10dp">
                <RadioButton
                    android:id="@+id/save"
                    android:button="@null"
                    android:layout_width="85dp"
                    android:layout_height="40dp"
                    android:text="@string/save"
                    android:textAlignment="gravity"
                    android:layout_gravity="center"
                    android:gravity="center|center_vertical"
                    android:background="@drawable/button_background"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:includeFontPadding="false"
                    />

                <RadioButton
                    android:id="@+id/cancel"
                    android:button="@null"
                    android:layout_width="85dp"
                    android:layout_height="40dp"
                    android:text="@string/cancel"
                    android:textAlignment="gravity"
                    android:layout_gravity="center"
                    android:gravity="center|center_vertical"
                    android:background="@drawable/button_background"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:includeFontPadding="false"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>